[tool.poetry]
name = "jlc2kicad_lib"
version = "0.0.1"
description = ""
authors = ["TousstNicolas"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.27.1"
KicadModTree = "1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
